# tuna-database

./: .gitignore  LICENSE  README.md  bluefin.json  bluefin.py  map.py  pyproject.toml  report.html  sat_cache.json  satellite.py  spots.json  tuna.py
.github/workflows/: daily-report.yml  forecast-notify.yml
data/: catches.json  home.json  hotspots.json  sightings.json  spots.json
docs/: forecast.md  today.md
public/: map.html  report.html
src/tuna/: __init__.py  cli.py  conditions.py  config.py  finder.py  forecast.py  learn.py  marine.py  model.py  ocean.py  patterns.py  report.py  scoring.py  seasonality.py  spots.py
src/tuna/sources/: __init__.py  _http.py  ais.py  chlorophyll.py  openmeteo_marine.py  openmeteo_weather.py  solunar.py
tests/: conftest.py  test_finder_learn.py  test_forecast.py  test_scoring.py  test_solunar.py  test_spots.py
tools/: day_image.py  hotspots.py  notify.py
web/: app.js  index.html  style.css
