[project]
name = "tuna-database"
version = "0.1.0"
description = "Daily bluefin tuna casting-spot finder for the Lebanese coast"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = []  # runtime is stdlib-only (uses urllib for the marine API)

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
tuna = "tuna.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
